# mirror-sim

./: README.md  pyproject.toml
models/example1/: 未命名1.blend
src/: BlenderNotebook.ipynb  objects.py  script_1.py  script_2.py  sim_1.ipynb  sim_raysect.ipynb  untils.py
src/objects/: vehicle.py
src/utils/: file_ops.py
