[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mirror_sim"            # 包名，改成你的项目名
version = "0.1.0"                # 初始版本号
description = "开发环境"
readme = "README.md"             # 可选：项目自述文件
authors = [
  { name = "Weixian Fu", email = "weixian.fu@outlook.com" }
]
license = { file = "LICENSE" }      
keywords = ["bpy", "mirror", "vision"]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  # 运行时依赖列表，例如：
  # "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",     # 测试框架
  "flake8>=6.0",     # 代码风格检查
  "mypy>=1.0"        # 类型检查
]

[tool.setuptools.packages.find]
where = ["src"]      # 源码目录，可改为项目根目录
exclude = ["tests*"]
